--- a/aspDotNetCore.csproj
+++ b/aspDotNetCore.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>766edc58-0dc5-48e7-8464-2db7bc2ebfee</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
