--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "server=DESKTOP-J9BKMOQ\\SHAWKAT;database=Pluto;integrated security=true; trust server certificate=true"
+  },
+  "Attachments": {
+    "AllowedExtentions": "jpg,png",
+    "MaxSizeInMegaBytes": 1,
+    "EnableCompression":  true
   }
 }
