--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,13 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Error",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "Console": {
+      "LogLevel": {
+        "Default" :  "Trace"
+      }
     }
   },
   "AllowedHosts": "*",
