--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     },
     "Console": {
       "LogLevel": {
-        "Default" :  "Trace"
+        "Default": "Trace"
       }
     }
   },
@@ -17,6 +17,12 @@
   "Attachments": {
     "AllowedExtentions": "jpg,png",
     "MaxSizeInMegaBytes": 1,
-    "EnableCompression":  true
+    "EnableCompression": true
+  },
+  "Jwt": {
+    "Issuer": "https://localhost",
+    "Audience": "https://localhost:4000/webportal",
+    "Lifetime": 30,
+    "SigningKey": "YourSuperSecretKeyThatIsAtLeast32CharactersLong"
   }
 }
